# helena_haffner_orange_county_lettings_P13_22052025

./: .coveragerc  .dockerignore  .flake8  .gitignore  .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  oc-lettings-site.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: cicd.yml  django.yml  master_branch.yml  peripherals_branches.yml
doc/_build/doctrees/: environment.pickle  index.doctree
doc/_build/html/: .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html
doc/src/: lettings.migrations.rst  modules.rst  profiles.rst
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/src/: modules.rst  profiles.migrations.rst  project_description.rst
lettings/: models.py  tests.py  urls.py  views.py
lettings/migrations/: 0001_initial.py  0002_auto_20250606_1336.py
lettings/templates/lettings/: letting.html
oc_lettings_site/: models.py  settings.py  tests.py  urls.py  views.py
oc_lettings_site/migrations/: 0002_auto_20250613_0746.py  0002_remove_letting_address_remove_profile_user_and_more.py
oc_lettings_site/templates/: 404.html  500.html
oc_lettings_site/templates/partial/: home_button.html
profiles/: models.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py  0002_auto_20250606_1303.py  0003_alter_profile_user.py
profiles/templates/profiles/: profile.html
static/css/: styles.css
(+49 files in other folders)
