[tool.poetry]
name = "helena-haffner-orange-county-lettings-p13-22052025"
version = "0.1.0"
description = ""
authors = ["Featherine <helaena.haffner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
pytest-django = "^4.11.1"
flake8 = "^7.2.0"
coverage = "^7.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
